k8s/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: students
  namespace: demo
  labels:
    app: students
    service: students
spec:
  selector:
    app: springboot
  type: LoadBalancer
  ports:
   -  protocol: TCP
      port: 80
      targetPort: 8080
